<resources>
    <string name="app_name">TrainingApp</string>
    <string name="action_settings">Language</string>
    <string name="kalkulator_BMI">Calculator BMI</string>
    <string name="BMI_Label">BMI Calculator</string>
    <string name="BMI_EnterHeight">Enter your growth (cm):</string>
    <string name="Calculate">Calculate</string>
    <string name="BMI_EnterWeight">Enter your weight (kg):</string>
    <string name="kalkulator_BMR">Calculator BMR</string>
    <string name="kalkulator_tluszcz">Calculator FAT</string>
    <string name="calculatorAge">Enter your age</string>
    <string name="EnterWaist">Enter your waist (cm):</string>
    <string name="fatLabel">Fat %:</string>
    <string name="BMI_Discription_Underweight">Underweight</string>
    <string name="BMI_Discription_Normal_weight">Normal weight</string>
    <string name="BMI_Discription_Overweight">Overweight</string>
    <string name="BMI_Discription_Obese">Obese</string>
    <string name="BMI_Discription_Morbidly_Obese">Morbidly Obese</string>
    <string name="dayLabel">Training days</string>
    <string name="exercisesLabel">Exercises:</string>
    <string name="exception">Error! Enter or correct the data.</string>
    <string name="confirmDialog">OK</string>
    <string name="cancelDialog">Cancel</string>
    <string name="maxDaysAlert">You have set the maximum amount training day.</string>
    <string name="maxExercisesAlert">You have set the maximum amount exercises.</string>
    <string name="deleteAlert">Do you really want to delete this day?</string>
    <string name="enterName">Enter exercise name:</string>
    <string name="Weight">Weight</string>
    <string name="Age">Age</string>
    <string name="Waist">Waist</string>
    <string name="Man">Man</string>
    <string name="Woman">Woman</string>
    <string name="Growth">Growth</string>
    <string name="toManyRows">You can\'t add more rows.</string>
    <string name="deleteEx">Do you really want to delete this exercise?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">SAVE</string>
    <string name="Edit">EDIT</string>
    <string name="sets">Sets</string>
    <string name="repeats">Repeats</string>
    <string name="weight">Weight</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="fail">Fail</string>
</resources>
